<resources>
    <string name="app_name">PRM1</string>
    <string name="default_city_name">Warszawa</string>
    <string name="save">zapisz</string>
    <string name="add">dodaj</string>
    <string name="ilosc">Ilość</string>
    <string name="tytul">Tytuł</string>
    <string name="nazwa">Nazwa</string>
    <string name="produkty_spo_ywcze">Produkty spożywcze</string>
    <string name="leki">Leki</string>
    <string name="kosmetyki">Kosmetyki</string>
    <string name="kategoria">Kategoria</string>
    <string name="data_waznosci">Data Ważności</string>
    <string name="_0">0</string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string name="green">green</string>
    <string name="nagranie">Nagranie</string>
    <string name="zdj_cie">Zdjęcie</string>
    <string name="notatka">Notatka</string>
    <string name="mapa">Mapa</string>
    <string name="invalid_password">Podano nieprawidłowe hasło</string>
    <string name="enter_title">Wprowadź tytuł</string>
    <string name="empty_title">Brak tytułu</string>
    <string name="enter_content">Wprowadź treść</string>
    <string name="empty_content">Brak treści</string>
    <string name="add_photo">Dodaj zdjęcie</string>
    <string name="add_audio">Dodaj nagranie</string>
    <string name="stop_audio">Zatrzymaj nagranie</string>
    <string name="save_entry">Zapisz wpis</string>
    <string name="enter_password">Wprowadź hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="selected_photo">Selected Photo</string>
    <string name="location">Lokalizacja:</string>
    <string name="image_path">Ścieżka obrazu:</string>
    <string name="recording_path">Ścieżka nagrania:</string>
    <string name="unknown_location">Nieznana lokalizacja</string>
    <string name="empty">Brak</string>
    <string name="item">Item</string>
    <string name="save1">save</string>
    <string name="todo">TODO</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="nagraj">Nagraj</string>

</resources>