<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.prm1.viewmodel.FormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FormFragment">

        <TextView
            android:id="@+id/label_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/notatka"
            app:layout_constraintStart_toStartOf="@+id/label_name"
            app:layout_constraintTop_toBottomOf="@+id/picture" />

        <EditText
            android:id="@+id/field_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tytul"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={viewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_name"
            app:layout_constraintTop_toBottomOf="@+id/label_name" />

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/nazwa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> viewModel.onSave()}"
            android:text="@{viewModel.buttonText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Dodaj" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <Button
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> viewModel.onAddPicture()}"
            android:text="@string/zdj_cie"
            app:layout_constraintStart_toStartOf="@+id/field_name"
            app:layout_constraintTop_toBottomOf="@+id/field_name" />

        <Button
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/nagraj"
            app:layout_constraintEnd_toStartOf="@+id/playButton"
            app:layout_constraintStart_toEndOf="@+id/picture"
            app:layout_constraintTop_toBottomOf="@+id/field_name" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            app:layout_constraintEnd_toEndOf="@+id/playButton"
            app:layout_constraintStart_toStartOf="@+id/playButton"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/play"
            app:layout_constraintEnd_toEndOf="@+id/field_name"
            app:layout_constraintTop_toBottomOf="@+id/field_name" />

        <EditText
            android:id="@+id/field_note"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={viewModel.note}"
            app:layout_constraintEnd_toEndOf="@+id/field_name"
            app:layout_constraintStart_toStartOf="@+id/label_name"
            app:layout_constraintTop_toBottomOf="@+id/label_note" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/field_note"
            app:layout_constraintStart_toStartOf="@+id/field_note"
            app:srcCompat="@drawable/ic_add"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
